# designacoes

./: .gitignore  README.md  config-exemplo.json  pyproject.toml
config/: config-exemplo.json
src/: agenda.py  alocador.py  config.py  configuracoes_gerais.py  csp.py  designacoes_predefinidas.py  extra.py  funcional.py  gerador_pdf.py  inicializacao.py  main.py  planilha.py  teste.py  util.py
src/conversores/: conversor.py  conversor_fim_semana_jpeg.py  conversor_meio_semana_pdf.py
src/csp/: csp.py
src/extratores/: __init__.py  extrator.py  extrator_meio_semana_pdf.py  extratores_fim_semana_jpeg.py
src/genetica/: genetica.py  genetica_adapter.py
tests/: reproduce_issue.py  test_alocador.py  test_util.py
